<resources>
    <string name="app_name">SCOREBOARD</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="action_profile">Profile</string>


    // ===================================
    // registration page text
    // ===================================
    <string name="registration_view_title">Match registration</string>
    <string name="match_view_title">Match scoreboard</string>
    <string name="single_match_btn">Single Game</string>
    <string name="double_match_btn">Double Game</string>
    <string name="player_a">Play A</string>
    <string name="player_b">Play B</string>
    <string name="start_btn">Start Game</string>

    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam efficitur ipsum in placerat molestie. Fusce quis mauris a enim sollicitudin ultrices non eget velit. Aliquam eu pulvinar enim. Praesent libero nisl, ultricies vel maximus eu, maximus et nisi. Phasellus pharetra nec ligula vitae mollis. Quisque porttitor ornare magna, quis dignissim libero aliquam id. Donec sollicitudin ultrices ante, a semper erat tristique in. Vivamus sodales in ligula at sodales. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Nulla tempus bibendum nibh, ac tincidunt quam convallis non. Proin dolor nunc, egestas et tortor consequat, dignissim lacinia odio. Ut ut aliquet erat.  Ut non scelerisque elit. Morbi dolor neque, iaculis eu justo rutrum, aliquet dictum mauris. Phasellus quis massa ut ligula feugiat congue a et dolor. Etiam a dui a sapien ornare accumsan ac ut lorem. Suspendisse vehicula lorem dapibus nibh rhoncus ultricies. Proin sem nulla, elementum quis pharetra quis, commodo vitae nisi. Donec urna orci, posuere et iaculis sit amet, fringilla quis sapien. Pellentesque nec posuere felis. Praesent malesuada tellus nisi, non dictum justo interdum eget. Quisque mollis euismod libero, non aliquam lorem interdum vitae. Aliquam vehicula efficitur purus eget rutrum. Sed pulvinar fermentum risus ac viverra. Cras laoreet ligula quam, ac lacinia nisl elementum in. Aenean velit arcu, euismod a venenatis non, pulvinar pulvinar massa.</string>


    <string name="tab_1">Recent Games</string>
    <string name="tab_2">All Games</string>

    // ===================================
    // Match page text
    // ===================================

    <string name="smash_win">Won by Smash</string>
    <string name="net_win">Won by Net</string>
    <string name="clear_win">Won by Clear</string>
    <string name="error_win">Won by Error</string>
    <string name="add_point">+1</string>
    <string name="deduct_point">-1</string>
    <string name="match_summary">Match Summary</string>
    <string name="close">Close</string>

    // ===================================
    // match summary page text
    // ===================================
    <string name="match_summary_title">Match Summary</string>
    <string name="confirm_btn">OK</string>
    // ===================================
    // Home page welcome text
    // ===================================
    <string name="welcome">Hello badminton Players:
    \n\n The application is developed to record score during badminton tournament by a small group of volunteers.
    \n\n This version is specifically meant for 10th Finland Chinese tournament, as the event represents a great milestone for Chinese badminton community
    \n\n This is still a basic version. Some Pro functionalities have been either disabled or under construction.
    \n\n This App will be further developed in the future.
    \n\n Thanks for the effort by Ma Xiao, Ding Hong and Wei Chao
    \n\n 11.2015, Espoo</string>
</resources>
