<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SingleScore">

    <android.support.v7.widget.Toolbar
        android:id="@+id/match_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:minHeight="@dimen/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/match_view_title"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:gravity="center"
                android:text="@string/match_view_title"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/single_startover_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="0dp"
                style="@android:style/Widget.Material.Button.Borderless"
                android:paddingTop="8dp"
                android:onClick="startOver"
                android:text="@string/close"
                android:textSize="12sp" />

        </RelativeLayout>


    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="72dp"
        app:cardBackgroundColor="@color/black"
        app:cardCornerRadius="4dp">


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:id="@+id/match_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">


                    <TextView
                        android:id="@+id/playerA_name_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:background="@color/cyan_dark"
                        android:gravity="left"
                        android:padding="6dp"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="12sp" />


                    <TextView
                        android:id="@+id/playerB_name_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:background="@color/red_dark"
                        android:gravity="right"
                        android:padding="6dp"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/main_score_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/match_title"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/playerA_score_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:background="@color/cyan"
                        android:gravity="center_horizontal"
                        android:paddingBottom="16dp"
                        android:paddingRight="24dp"
                        android:paddingTop="16dp"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="64sp" />

                    <TextView
                        android:id="@+id/playerB_score_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="1"
                        android:background="@color/red"
                        android:gravity="center_horizontal"
                        android:paddingBottom="16dp"
                        android:paddingLeft="24dp"
                        android:paddingTop="16dp"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="64sp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/playerA_set_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingBottom="4dp"
                        android:paddingRight="8dp"
                        android:paddingTop="4dp"
                        android:text="0"
                        android:textAllCaps="true"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/playerB_set_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingBottom="4dp"
                        android:paddingLeft="8dp"
                        android:paddingTop="4dp"
                        android:text="0"
                        android:textAllCaps="true"
                        android:textColor="@color/white" />

                </LinearLayout>

                <Chronometer
                    android:id="@+id/clock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="70dp"
                    android:background="@color/purple"
                    android:format="%s"
                    android:paddingBottom="4dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="4dp"
                    android:textColor="@color/white" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_smash_A"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/score_btn_left"
                    android:onClick="smashA"
                    android:text="@string/add_point"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/yellow_dark"
                    android:gravity="center"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/smash_win"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/button_smash_B"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/score_btn_right"
                    android:onClick="smashB"
                    android:text="@string/add_point"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_net_A"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/score_btn_left"
                    android:onClick="netA"
                    android:text="@string/add_point"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/yellow_dark"
                    android:gravity="center"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/net_win"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/button_net_B"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/score_btn_right"
                    android:onClick="netB"
                    android:text="@string/add_point"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_clear_A"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/score_btn_left"
                    android:onClick="clearA"
                    android:text="@string/add_point"
                    android:textColor="@color/white"
                    android:textSize="16sp" />


                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/yellow_dark"
                    android:gravity="center"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/clear_win"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="11sp" />

                <Button
                    android:id="@+id/button_clear_B"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/score_btn_right"
                    android:onClick="clearB"
                    android:text="@string/add_point"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_opponent_A"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/score_btn_left"
                    android:onClick="oppoA"
                    android:text="@string/add_point"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@color/yellow_dark"
                    android:gravity="center"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/error_win"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="11sp" />


                <Button
                    android:id="@+id/button_opponent_B"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/score_btn_right"
                    android:onClick="oppoB"
                    android:text="@string/add_point"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>


    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/winner_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_score_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/single_reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:onClick="reset"
            android:text="Reset"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/single_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginRight="1dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:onClick="nextSet"
            android:text="next set"
            android:textColor="@color/white" />
        <!--
                <Button
                    android:id="@+id/single_startover_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_marginRight="1dp"
                    android:layout_weight="1"
                    android:background="@color/black"
                    android:onClick="startOver"
                    android:text="Start over"
                    android:textColor="@color/white" />-->

        <Button
            android:id="@+id/statistic_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:background="@color/black"
            android:onClick="statistics"
            android:text="Statistics"
            android:textColor="@color/white" />

    </LinearLayout>

</RelativeLayout>
